--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atom-dynamic-macro",
   "main": "./lib/atom-dynamic-macro",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Atom version of Dynamic Macro",
   "keywords": [
     "Dynamic Macro"
@@ -14,6 +14,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
