package.jsonを修正して、パッケージロード時にディレイなしでactivateが実行されるようにした #4

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "keywords": [
     "Dynamic Macro"
   ],
+  "activationCommands_removed_for_no_delay": {
+    "atom-workspace": "atom-dynamic-macro:execute"
+  },
   "repository": "https://github.com/masui/atom-dynamic-macro",
   "license": "MIT",
   "engines": {
