--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "atom-dynamic-macro",
   "main": "./lib/atom-dynamic-macro",
   "version": "0.29.1",
-  "description": "Atom version of Dynamic Macro",
+  "description": "Atom版 Dynamic Macro",
   "keywords": [
     "Dynamic Macro"
   ],
-  "activationCommands_removed_for_no_delay": {
-    "atom-workspace": "atom-dynamic-macro:execute"
-  },
   "repository": "https://github.com/masui/atom-dynamic-macro",
   "license": "MIT",
   "engines": {
