--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atom-dynamic-macro",
   "main": "./lib/atom-dynamic-macro",
   "version": "1.0.0",
-  "description": "Atom-version Dynamic Macro",
+  "description": "Dynamic Macro on Atom",
   "keywords": [
     "Dynamic Macro"
   ],
